@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.03-dev - 
 
+get rid of Apache::TestTrace's dependency on Apache::TestConfig as it
+creates too many circular use() problems. [Stas]
+
 wrap blib loading in eval block (added to autogenerated files), to
 prevent 'make clean' failures. [Stas]
 
